--- a/loveTime/mylove.html
+++ b/loveTime/mylove.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>见证我们的爱</title>
-	<link rel="stylesheet" href="mylove.css">
-</head>
-<body>
-	
-</body>
-<script src="mylove.js"></script>
+<html lang="zh-cn">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+		<title>OurLove</title>
+		<link href="dist/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="mylove.css">
+	</head>
+	<body>
+		
+		<div class="container-fluid text-center head-title">
+			<div class="row">
+				<h2 class="col-xs-12 col-md-12">Our Love</h2>
+			</div>
+			<div class="row container">
+				<h3 class="row small-title">Stay Together</h3>
+				<div id="timer" class="row">
+					<h2 class="col-xs-12 col-md-12 col-lg-12"></h2>
+				</div>
+			</div>
+		</div>
+		<div class="bottom-box container-fluid  text-center">
+			<div class="row container">
+				<h3 class="row">下一纪念日:</h3>
+				<div class="row">
+					<div class="col-xs-2 col-md-2"></div>
+					<h4 class="col-xs-4 col-md-4 text-right">北京相聚</h4>
+					<h4 data-date="2016/10/22" class="next-timer col-xs-6 col-md-5 text-left">还有:13天52分</h4>
+				</div>
+			</div>
+			<div class="row container">
+				<div class="row">
+					<div class="col-xs-2 col-md-2"></div>
+					<div data-date="2016/10/24" class="target col-xs-4 col-md-4 text-right">10月24日</div>
+					<div class="col-xs-6 col-md-5 text-left">涛涛父亲生日</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-2 col-md-2"></div>
+					<div data-date="2016/10/28" class="target col-xs-4 col-md-4 text-right"><span class="special glyphicon glyphicon-asterisk"></span>10月28日</div>
+					<div class="col-xs-6 col-md-5 text-left">涛涛生日</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-2 col-md-2"></div>
+					<div data-date="2016/11/03" class="target col-xs-4 col-md-4 text-right">11月03日</div>
+					<div class="col-xs-6 col-md-5 text-left">两个月纪念</div>
+				</div>
+			</div>
+		</div>
+
+		<script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+		<script src="dist/js/bootstrap.min.js"></script>
+		<script src="mylove.js"></script>
+	</body>
 </html>
