--- a/loveTime/mylove.html
+++ b/loveTime/mylove.html
@@ -49,7 +49,7 @@
 			</div>
 		</div>
 
-		<script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+		<script src="jquery-3.1.1.min.js"></script>
 		<script src="dist/js/bootstrap.min.js"></script>
 		<script src="mylove.js"></script>
 	</body>
