--- a/loveTime/mylove.html
+++ b/loveTime/mylove.html
@@ -11,7 +11,7 @@
 	<body>
 		
 		<div class="container-fluid text-center head-title">
-			<div class="row">
+			<div class="row container">
 				<h2 class="col-xs-12 col-md-12">Our Love</h2>
 			</div>
 			<div class="row container">
