--- a/loveTime/mylove.html
+++ b/loveTime/mylove.html
@@ -51,6 +51,6 @@
 
 		<script src="jquery-3.1.1.min.js"></script>
 		<script src="dist/js/bootstrap.min.js"></script>
-		<script src="mylove.js"></script>
+		<script src="src/script/index.bundle.js"></script>
 	</body>
 </html>
